--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <p>Este es un cambio remoto desde Ricardo</p>
       <p>Se actualizan CONFLICTOS!!!!!</p>
 
+      <h2>Este es un subtitulo</h2>
+
     </body>
 </html>
